[package]
name = "yniffi"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = [
    "uniffi-bindgen",
]

[dependencies]
lib0 = "0.16.4" # must match yrs version
thiserror = "1.0.38"
uniffi = "0.23.0"
yrs = "0.16.4"

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }

[lib]
name = "uniffi_yniffi"
path = "src/lib.rs"
crate-type = ["staticlib"]
