[package]
name = "yniffi"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
yrs = "0.18.2"
thiserror = "1.0.38"
uniffi = "0.27.1"

[build-dependencies]
uniffi = { version = "0.27.1", features = [ "build" ] }

[lib]
name = "uniffi_yniffi"
path = "src/lib.rs"
crate-type = ["staticlib"]
